--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "description": "my first socket.io app",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "socket.io": "^4.3.1"
+    "express": "^4.17.1"
   }
 }
